--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,10 @@
       <input type="text" id="exercise" name="exercise" required><br><br>
 
       <label for="weight">Weight:</label><br>
-      <input type="text" id="weight" name="exercise" required><br><br>
+      <input type="text" id="weight" name="weight" required><br><br>
 
       <label for="reps">Reps:</label><br>
-      <input type="text" id="reps" name="exercise" required><br><br>
+      <input type="text" id="reps" name="reps" required><br><br>
 
       <button type="submit">Log Workout</button>
     </form>
