Added reset button to clear DB

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,5 +17,8 @@
 
       <button type="submit">Log Workout</button>
     </form>
+    <form method="POST" action="/reset-db">
+      <button type="submit">Reset DB</button>
+    </form>
   </body>
 </html>
